# BlueEngine

./: .clog.toml  .gitignore  CHANGELOG.md  CHANGELOG2.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build.rs  cliff.toml  justfile  winbuild.bat  winrun.bat
.github/: FUNDING.yml  dependabot.yml  rust-linux.yml
.github/workflows/: build.yml  changelog.yml  publish.yml  release.yml  rust-clippy.yml  rust-win.yml  rust_posix.yml  rust_win.yml
BlueEngine-master/: CODE_OF_CONDUCT.md  justfile
BlueEngine-master/.github/workflows/: rust-osx.yml
BlueEngine-master/examples/camera/: rotate_around.rs
BlueEngine-master/examples/dev/: README.md
BlueEngine-master/examples/dev/resource/: default_shader.wgsl
BlueEngine-master/examples/shapes/: cube.rs  models.rs  triangle.rs
BlueEngine-master/src/: definition.rs  header.rs  primitive_shapes.rs
BlueEngine-master/src/header/: imports.rs  uniform_buffer.rs
BlueEngine-master/src/primitive_shapes/: three_dimensions.rs  two_dimensions.rs
BlueEngine-master/src/utils/: camera.rs
crates/blue_engine_core/: Cargo.toml  README.md
crates/blue_engine_core/src/: definition.rs  engine.rs  error.rs  header.rs  lib.rs  objects.rs  position.rs  prelude.rs  primitive_shapes.rs  render.rs  utils.rs  vector.rs  window.rs
crates/blue_engine_core/src/header/: imports.rs  uniform_buffer.rs
crates/blue_engine_core/src/objects/: instance.rs  mod.rs  resource_sharing.rs  shader_builder.rs  transformation.rs  updating.rs
crates/blue_engine_core/src/prelude/: imports.rs  mod.rs  primitive_shapes.rs  vector.rs
crates/blue_engine_core/src/primitive_shapes/: three_dimensions.rs  two_dimensions.rs
crates/blue_engine_core/src/utils/: camera.rs  current_input.rs  default_resources.rs  mod.rs  primitive_shapes.rs  winit_input_helper.rs
crates/blue_engine_dynamic/: Cargo.toml  README.md
crates/blue_engine_dynamic/src/: lib.rs
crates/blue_engine_utilities/: Cargo.toml  README.md
crates/blue_engine_utilities/examples/: animation.rs  basic_light.rs  egui_embedded_renderer.rs  flycamera.rs  hello_egui.rs  model.rs  physics.rs  raycast.rs
crates/blue_engine_utilities/src/: definitions.rs  header.rs  lib.rs
crates/blue_engine_utilities/src/definitions/: animation.rs  egui.rs  egui_plugin.rs  flycamera.rs  light.rs  light_shader.wgsl  model_load.rs  physics.rs  raycast.rs
crates/docs/: main.md
examples/: README.md  signals.rs
examples/camera/: fly_camera.rs  rotate_around.rs
examples/dev/: animation.rs  dev.rs
examples/dev/resource/: default_shader.wgsl
examples/gui/: hello_gui.rs  styling.rs
examples/shapes/: cube.rs  square.rs  triangle.rs
examples/utils/: clear_color.rs  headless.rs  headless_loop.rs  instancing.rs  render_order.rs  resource_sharing.rs  scissor.rs  signals.rs  wireframe.rs
imgui-winit-support/: Cargo.toml
imgui-winit-support/src/: lib.rs
resources/: monkey.glb
shaders/: shader.fs  shader.vs  shader.vs.spv  vertex.shader
src/: camera.rs  creation.rs  definition.rs  definitions.rs  header.rs  lib.rs  main.rs  objects.rs  render copy.rs  render.rs  shader.rs  signal.rs  state.rs  texture.rs  utils.rs  window copy.rs  window.rs
src/definition/: pipeline.rs  shaders.rs  texture.rs  uniform_buffer.rs  vertex_buffer.rs
src/header/: imports.rs  structs_and_impls.rs  traits_and_enums_and_functions.rs
src/objects/: two_dimensions.rs
src/primitive_shapes/: three_dimensions.rs  two_dimensions.rs
src/utils/: animation.rs  camera.rs  current_input.rs  default_resources.rs  default_shader.wgsl  flycamera.rs  light.rs  loader.rs  objects.rs  shapes.rs  shapes2D.rs  text.rs  winit_input_helper.rs
