[package]
name = "blue_engine"
version = "0.9.3"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
edition = "2024"
description = "General-Purpose, Easy-to-use, Fast, and Portable graphics engine"
documentation = "https://docs.rs/blue_engine"
repository = "https://github.com/AryanpurTech/BlueEngine"
keywords = ["gamedev", "graphics", "3D", "2D", "rendering"]
categories = ["game-development", "gui", "graphics", "rendering"]
license = "Apache-2.0"
exclude = ["/examples", "/resources"]

[lib]
name = "blue_engine"

[features]
default = ["debug", "window", "static_link"]
## use the static build of the engine
static_link = ["dep:blue_engine_core"]
## Use the dynamic build of the engine
dynamic_link = ["dep:blue_engine_dynamic"]
## Enables a window for rendering. This needs the `headless` feature to be disabled
window = ["blue_engine_core?/window", "blue_engine_dynamic?/window"]
debug = ["blue_engine_core?/debug", "blue_engine_dynamic?/debug"]
## Enables rendering in headless mode, and without a window. Thus needs the `window` feature to be disabled
headless = ["blue_engine_core?/headless", "blue_engine_dynamic?/headless"]
## For android builds. This needs the `headless` feature to be disabled
android = ["blue_engine_core?/android", "blue_engine_dynamic?/android"]
android_native_activity = [
    "blue_engine_core?/android_native_activity",
    "blue_engine_dynamic?/android_native_activity",
]
android_game_activity = [
    "blue_engine_core?/android_game_activity",
    "blue_engine_dynamic?/android_game_activity",
]
## using u32 for indices and others
u32 = ["blue_engine_core?/u32", "blue_engine_dynamic?/u32"]
## fast math
glam_fast_math = [
    "blue_engine_core?/glam_fast_math",
    "blue_engine_dynamic?/glam_fast_math",
]

[dependencies]
# blue_engine_core = { version = "0.9.3", optional = true }
blue_engine_core = { path = "crates/blue_engine_core", optional = true }

# Wasm does not support dynamic linking.
blue_engine_dynamic = { version = "0.9.2", optional = true }
# blue_engine_dynamic = { path = "crates/blue_engine_dynamic", optional = true }

# ========== EXAMPLES ========== #

# SHAPES
[[example]]
name = "triangle"
path = "examples/shapes/triangle.rs"

[[example]]
name = "square"
path = "examples/shapes/square.rs"

[[example]]
name = "cube"
path = "examples/shapes/cube.rs"

# CAMERA
[[example]]
name = "rotate_around"
path = "examples/camera/rotate_around.rs"

# Utils
[[example]]
name = "resource_sharing"
path = "examples/utils/resource_sharing.rs"

[[example]]
name = "instancing"
path = "examples/utils/instancing.rs"

[[example]]
name = "render_order"
path = "examples/utils/render_order.rs"

[[example]]
name = "wireframe"
path = "examples/utils/wireframe.rs"

[[example]]
name = "scissor"
path = "examples/utils/scissor.rs"

[[example]]
name = "clear_color"
path = "examples/utils/clear_color.rs"

[[example]]
name = "signals"
path = "examples/utils/signals.rs"

[[example]]
name = "headless"
path = "examples/utils/headless.rs"

# Development ONLY
[[example]]
name = "dev"
path = "examples/dev/dev.rs"
