[package]
name = "blue_engine_dynamic"
version = "0.8.0"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
edition = "2024"
description = "USE blue_engine THIS IS FOR INTERNAL USE"
license = "Apache-2.0"

[lib]
name = "blue_engine_dynamic"
crate-type = ["dylib"]

[features]
default = ["debug"]
debug = ["blue_engine_core/debug"]
headless = ["blue_engine_core/headless"]
android = ["blue_engine_core/android"]
android_native_activity = ["blue_engine_core/android_native_activity"]
android_game_activity = ["blue_engine_core/android_game_activity"]
# using u32 for indices and others
u32 = ["blue_engine_core/u32"]

glam_fast_math = ["blue_engine_core/glam_fast_math"]

[dependencies]
# blue_engine_core = { version = "0.8.0" }
blue_engine_core = { path = "../blue_engine_core" }
